Add SEO meta tags and Open Graph tags

--- a/da-ong-fe/index.html
+++ b/da-ong-fe/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đá & Ong - Đặt Bàn Nhà Hàng</title>
+    <meta name="description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng. Địa chỉ: 136 Tôn Đức Thắng và 25 Nguyễn Thái Bình, Hoà Khánh, Đà Nẵng.">
+    <meta name="keywords" content="nhà hàng đà nẵng, đặt bàn online, ẩm thực đà nẵng, nhà hàng đá và ong, best seller, món ngon mỗi ngày">
+    <meta name="author" content="Nhà hàng Đá & Ong">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://nhahangdavaong.com">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nhahangdavaong.com">
+    <meta property="og:title" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng">
+    <meta property="og:description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.">
+    <meta property="og:image" content="https://nhahangdavaong.com/LOGO-DA-ONG.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nhahangdavaong.com">
+    <meta property="twitter:title" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng">
+    <meta property="twitter:description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.">
+    <meta property="twitter:image" content="https://nhahangdavaong.com/LOGO-DA-ONG.png">
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
