Update title and add structured data (JSON-LD) for better Google search display

--- a/da-ong-fe/index.html
+++ b/da-ong-fe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Đá & Ong - Đặt Bàn Nhà Hàng</title>
+    <title>Nhà Hàng Đá & Ong - Ẩm Thực Đẳng Cấp Đà Nẵng | Đặt Bàn Online</title>
     <meta name="description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng. Địa chỉ: 136 Tôn Đức Thắng và 25 Nguyễn Thái Bình, Hoà Khánh, Đà Nẵng.">
     <meta name="keywords" content="nhà hàng đà nẵng, đặt bàn online, ẩm thực đà nẵng, nhà hàng đá và ong, best seller, món ngon mỗi ngày">
     <meta name="author" content="Nhà hàng Đá & Ong">
