Add structured data (JSON-LD) for Google to display restaurant name instead of domain

--- a/da-ong-fe/index.html
+++ b/da-ong-fe/index.html
@@ -23,6 +23,60 @@
     <meta property="twitter:title" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng">
     <meta property="twitter:description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.">
     <meta property="twitter:image" content="https://nhahangdavaong.com/LOGO-DA-ONG.png">
+    
+    <!-- Structured Data (JSON-LD) for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Nhà Hàng Đá & Ong",
+      "alternateName": "Đá & Ong",
+      "url": "https://nhahangdavaong.com",
+      "logo": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
+      "image": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
+      "description": "Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.",
+      "address": [
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "136 Tôn Đức Thắng",
+          "addressLocality": "Hoà Khánh",
+          "addressRegion": "Đà Nẵng",
+          "addressCountry": "VN"
+        },
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "25 Nguyễn Thái Bình",
+          "addressLocality": "Hoà Khánh",
+          "addressRegion": "Đà Nẵng",
+          "addressCountry": "VN"
+        }
+      ],
+      "telephone": "0767518750",
+      "priceRange": "$$",
+      "servesCuisine": "Ẩm thực Việt Nam",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday",
+            "Sunday"
+          ],
+          "opens": "10:00",
+          "closes": "22:00"
+        }
+      ],
+      "acceptsReservations": "True",
+      "menu": "https://nhahangdavaong.com/menu",
+      "sameAs": [
+        "https://zalo.me/0767518750"
+      ]
+    }
+    </script>
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
