Add hot search keywords for restaurant SEO

--- a/da-ong-fe/index.html
+++ b/da-ong-fe/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nhà Hàng Đá & Ong - Ẩm Thực Đẳng Cấp Đà Nẵng | Đặt Bàn Online</title>
     <meta name="description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng. Địa chỉ: 136 Tôn Đức Thắng và 25 Nguyễn Thái Bình, Hoà Khánh, Đà Nẵng.">
-    <meta name="keywords" content="nhà hàng đà nẵng, đặt bàn online, ẩm thực đà nẵng, nhà hàng đá và ong, best seller, món ngon mỗi ngày">
+    <meta name="keywords" content="nhà hàng đà nẵng, đặt bàn online đà nẵng, nhà hàng buffet đà nẵng, nhà hàng hải sản đà nẵng, nhà hàng sang trọng đà nẵng, đặt bàn nhà hàng online, nhà hàng tiệc cưới đà nẵng, nhà hàng có phòng vip đà nẵng, nhà hàng view đẹp đà nẵng, ẩm thực đà nẵng, món ngon đà nẵng, best seller nhà hàng, đặt bàn qua zalo, nhà hàng gần sân bay đà nẵng, nhà hàng hoà khánh, nhà hàng đá và ong, đá và ong restaurant, món ngon mỗi ngày, thực đơn nhà hàng đà nẵng, đặt bàn trực tuyến">
     <meta name="author" content="Nhà hàng Đá & Ong">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://nhahangdavaong.com">
@@ -53,7 +53,8 @@
       ],
       "telephone": "0767518750",
       "priceRange": "$$",
-      "servesCuisine": "Ẩm thực Việt Nam",
+      "servesCuisine": ["Ẩm thực Việt Nam", "Hải sản", "Buffet", "Tiệc cưới"],
+      "keywords": "nhà hàng đà nẵng, đặt bàn online, nhà hàng buffet, nhà hàng hải sản, nhà hàng sang trọng, phòng vip, tiệc cưới, ẩm thực đà nẵng",
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
