Update SEO: shorten title and add SearchAction to structured data

--- a/da-ong-fe/index.html
+++ b/da-ong-fe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nhà Hàng Đá & Ong - Ẩm Thực Đẳng Cấp Đà Nẵng | Đặt Bàn Online</title>
+    <title>Nhà Hàng Đá & Ong - Ẩm Thực Đẳng Cấp Đà Nẵng</title>
     <meta name="description" content="Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng. Địa chỉ: 136 Tôn Đức Thắng và 25 Nguyễn Thái Bình, Hoà Khánh, Đà Nẵng.">
     <meta name="keywords" content="nhà hàng đà nẵng, đặt bàn online đà nẵng, nhà hàng buffet đà nẵng, nhà hàng hải sản đà nẵng, nhà hàng sang trọng đà nẵng, đặt bàn nhà hàng online, nhà hàng tiệc cưới đà nẵng, nhà hàng có phòng vip đà nẵng, nhà hàng view đẹp đà nẵng, ẩm thực đà nẵng, món ngon đà nẵng, best seller nhà hàng, đặt bàn qua zalo, nhà hàng gần sân bay đà nẵng, nhà hàng hoà khánh, nhà hàng đá và ong, đá và ong restaurant, món ngon mỗi ngày, thực đơn nhà hàng đà nẵng, đặt bàn trực tuyến">
     <meta name="author" content="Nhà hàng Đá & Ong">
@@ -26,57 +26,62 @@
     
     <!-- Structured Data (JSON-LD) for Google -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Restaurant",
-      "name": "Nhà Hàng Đá & Ong",
-      "alternateName": "Đá & Ong",
-      "url": "https://nhahangdavaong.com",
-      "logo": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
-      "image": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
-      "description": "Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.",
-      "address": [
-        {
-          "@type": "PostalAddress",
-          "streetAddress": "136 Tôn Đức Thắng",
-          "addressLocality": "Hoà Khánh",
-          "addressRegion": "Đà Nẵng",
-          "addressCountry": "VN"
+      {
+        "@context": "https://schema.org",
+        "@type": "Restaurant",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://nhahangdavaong.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
         },
-        {
-          "@type": "PostalAddress",
-          "streetAddress": "25 Nguyễn Thái Bình",
-          "addressLocality": "Hoà Khánh",
-          "addressRegion": "Đà Nẵng",
-          "addressCountry": "VN"
-        }
-      ],
-      "telephone": "0767518750",
-      "priceRange": "$$",
-      "servesCuisine": ["Ẩm thực Việt Nam", "Hải sản", "Buffet", "Tiệc cưới"],
-      "keywords": "nhà hàng đà nẵng, đặt bàn online, nhà hàng buffet, nhà hàng hải sản, nhà hàng sang trọng, phòng vip, tiệc cưới, ẩm thực đà nẵng",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday",
-            "Sunday"
-          ],
-          "opens": "10:00",
-          "closes": "22:00"
-        }
-      ],
-      "acceptsReservations": "True",
-      "menu": "https://nhahangdavaong.com/menu",
-      "sameAs": [
-        "https://zalo.me/0767518750"
-      ]
-    }
+        "name": "Nhà Hàng Đá & Ong",
+        "alternateName": "Đá & Ong",
+        "url": "https://nhahangdavaong.com",
+        "logo": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
+        "image": "https://nhahangdavaong.com/LOGO-DA-ONG.png",
+        "description": "Nhà hàng Đá & Ong - Ẩm thực đẳng cấp tại Đà Nẵng. Đặt bàn online, thực đơn phong phú, không gian sang trọng.",
+        "address": [
+          {
+            "@type": "PostalAddress",
+            "streetAddress": "136 Tôn Đức Thắng",
+            "addressLocality": "Hoà Khánh",
+            "addressRegion": "Đà Nẵng",
+            "addressCountry": "VN"
+          },
+          {
+            "@type": "PostalAddress",
+            "streetAddress": "25 Nguyễn Thái Bình",
+            "addressLocality": "Hoà Khánh",
+            "addressRegion": "Đà Nẵng",
+            "addressCountry": "VN"
+          }
+        ],
+        "telephone": "0767518750",
+        "priceRange": "$$",
+        "servesCuisine": ["Ẩm thực Việt Nam", "Hải sản", "Buffet", "Tiệc cưới"],
+        "keywords": "nhà hàng đà nẵng, đặt bàn online, nhà hàng buffet, nhà hàng hải sản, nhà hàng sang trọng, phòng vip, tiệc cưới, ẩm thực đà nẵng",
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday",
+              "Sunday"
+            ],
+            "opens": "10:00",
+            "closes": "22:00"
+          }
+        ],
+        "acceptsReservations": "True",
+        "menu": "https://nhahangdavaong.com/menu",
+        "sameAs": [
+          "https://zalo.me/0767518750"
+        ]
+      }
     </script>
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
